[package]
name = "selfhealing-hostbased-ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssh-key-collector"
path = "src/ssh-key-collector/main.rs"

[[bin]]
name = "ssh-known_hosts-updater"
path = "src/ssh-known_hosts-updater/main.rs"

[[bin]]
name = "ssh-delete-key_data"
path = "src/ssh-delete-key_data/main.rs"

[lib]
name = "global"
path = "src/global/lib.rs"

[dependencies]
chrono = "0.4.23"
fern = "0.6.1"
gethostname = "0.4.1"
getopts = "0.2.21"
lazy_static = "1.4.0"
log = "0.4.17"
mktemp = "0.5.0"
paho-mqtt = "0.12.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
simple-error = "0.2.3"
url = "2.3.1"

